--- a/HDLoggerExample/Podfile
+++ b/HDLoggerExample/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '10.0'
 
 source 'https://github.com/CocoaPods/Specs.git'
 source 'https://github.com/HumanDevice/ios-logger.git'
@@ -9,5 +9,5 @@ target 'HDLoggerExample' do
   use_frameworks!
 
   # Pods for HDLoggerExample
-  pod 'HDLogger', '~> 0.9.1'
+  pod 'HDLogger', '~> 0.9.2'
 end
